manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mandagsmiddag-backend
  namespace: mandagsmiddag
spec:
  replicas: 2
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        logs.bakseter.net/scrape: 'false'
    spec:
      containers:
        - name: mandagsmiddag-backend
          image: ghcr.io/bakseter/mandagsmiddag/backend:latest
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      terminationGracePeriodSeconds: 45
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - mandagsmiddag-backend
              topologyKey: bakseter.net/physical-node
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsGroup: 65534
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 65534
