manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandagsmiddag-backend
  namespace: mandagsmiddag
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
